{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 73,
  "lineage": "625e0b1c-94e3-92d8-f7ce-9183f8098e0a",
  "resources": [
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:security-group/sg-0071c56f595585045",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0071c56f595585045",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "m-farm-redis-sg",
            "name_prefix": "",
            "owner_id": "740857577909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "m-farm-redis-sg"
            },
            "tags_all": {
              "Name": "m-farm-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022b53b66b2464205",
            "arn": "arn:aws:ec2:us-east-1:740857577909:elastic-ip/eipalloc-022b53b66b2464205",
            "association_id": "eipassoc-0e885635bd57069ce",
            "domain": "vpc",
            "id": "eipalloc-022b53b66b2464205",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0308e73d9f098ae03",
            "private_dns": "ip-10-0-0-253.ec2.internal",
            "private_ip": "10.0.0.253",
            "public_dns": "ec2-34-197-182-243.compute-1.amazonaws.com",
            "public_ip": "34.197.182.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:internet-gateway/igw-08c880ad3781deddb",
            "id": "igw-08c880ad3781deddb",
            "owner_id": "740857577909",
            "tags": {
              "Name": "m-farm-igw"
            },
            "tags_all": {
              "Name": "m-farm-igw"
            },
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022b53b66b2464205",
            "association_id": "eipassoc-0e885635bd57069ce",
            "connectivity_type": "public",
            "id": "nat-0d9dd4f369278b7ff",
            "network_interface_id": "eni-0308e73d9f098ae03",
            "private_ip": "10.0.0.253",
            "public_ip": "34.197.182.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d712944e8293334",
            "tags": {
              "Name": "m-farm-nat"
            },
            "tags_all": {
              "Name": "m-farm-nat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:route-table/rtb-06dbf1f0e9a5b20a4",
            "id": "rtb-06dbf1f0e9a5b20a4",
            "owner_id": "740857577909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9dd4f369278b7ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "m-farm-private-rt"
            },
            "tags_all": {
              "Name": "m-farm-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:route-table/rtb-0074132d5b7f0fcac",
            "id": "rtb-0074132d5b7f0fcac",
            "owner_id": "740857577909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c880ad3781deddb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "m-farm-public-rt"
            },
            "tags_all": {
              "Name": "m-farm-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c396cee5d77fc80",
            "route_table_id": "rtb-06dbf1f0e9a5b20a4",
            "subnet_id": "subnet-0f3cb02fe7d9a3455"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa06a9f1ea7bb39b",
            "route_table_id": "rtb-06dbf1f0e9a5b20a4",
            "subnet_id": "subnet-0c24a76742efa5cdf"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f904feda82dc4c46",
            "route_table_id": "rtb-0074132d5b7f0fcac",
            "subnet_id": "subnet-08d712944e8293334"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e66db4d19fd6cbfb",
            "route_table_id": "rtb-0074132d5b7f0fcac",
            "subnet_id": "subnet-0cb1bf9a75c18e229"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:subnet/subnet-0f3cb02fe7d9a3455",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3cb02fe7d9a3455",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740857577909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "m-farm-private-0"
            },
            "tags_all": {
              "Name": "m-farm-private-0"
            },
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:subnet/subnet-0c24a76742efa5cdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c24a76742efa5cdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740857577909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "m-farm-private-1"
            },
            "tags_all": {
              "Name": "m-farm-private-1"
            },
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:subnet/subnet-08d712944e8293334",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d712944e8293334",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740857577909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "m-farm-public-0"
            },
            "tags_all": {
              "Name": "m-farm-public-0"
            },
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:subnet/subnet-0cb1bf9a75c18e229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb1bf9a75c18e229",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740857577909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "m-farm-public-1"
            },
            "tags_all": {
              "Name": "m-farm-public-1"
            },
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:vpc/vpc-045a4e670ab252264",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017e5d947a37f7af2",
            "default_route_table_id": "rtb-0461376856400af89",
            "default_security_group_id": "sg-0708f711416697659",
            "dhcp_options_id": "dopt-0f1e387cccd3b1505",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045a4e670ab252264",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0461376856400af89",
            "owner_id": "740857577909",
            "tags": {
              "Name": "$(var.project_name)-vpc"
            },
            "tags_all": {
              "Name": "$(var.project_name)-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds_payment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:security-group/sg-0008d28f1684883ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0008d28f1684883ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "m-farm-payment-rds-sg",
            "name_prefix": "",
            "owner_id": "740857577909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "m-farm-payment-rds-sg"
            },
            "tags_all": {
              "Name": "m-farm-payment-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds_product",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:security-group/sg-0ee6e57ca6048755f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee6e57ca6048755f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "m-farm-product-rds-sg",
            "name_prefix": "",
            "owner_id": "740857577909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "m-farm-product-rds-sg"
            },
            "tags_all": {
              "Name": "m-farm-product-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds_user",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740857577909:security-group/sg-00e219ff2d05bbcc2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e219ff2d05bbcc2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "m-farm-user-rds-sg",
            "name_prefix": "",
            "owner_id": "740857577909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "m-farm-user-rds-sg"
            },
            "tags_all": {
              "Name": "m-farm-user-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a4e670ab252264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}